LLVM asserts in internal-js-tests.yaml/Octane/stress-tests/mandreel.js https://bugs.webkit.org/show_bug.cgi?id=123535

Reviewed by Geoffrey Garen.

Use double comparisons for doubles.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::doubleToInt32):



Canonical link: https://commits.webkit.org/141859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158506 268f45cc-cd09-0410-ab3c-d52691b4dbfc